--- a/pod.yml
+++ b/pod.yml
@@ -2,13 +2,13 @@
 apiversion: v1
 kind: pod
 metadata:
--name: my-pod
+  name: my-pod
 spec:
-   containers:
-   -name: cbz-container
-   image: httpd
-   ports:
-   -name: http
-   containers: 80
-   protocol:TCp
+  containers:
+    -name: cbz-container
+    image: httpd
+    ports:
+      -name: http
+      containerPort: 80
+      Protocol: TCp
    ...
