--- a/pod.yml
+++ b/pod.yml
@@ -7,10 +7,12 @@ metadata:
     app: my-app
 spec:
   containers:
-    -name: cbz-container
-    image: httpd
-    ports:
-      -name: http
-      containerPort: 80
-      protocol: TCP
+    - name: cbz-container
+      image: httpd
+      ports:
+        - containerPort: 80
+    - name: tomcat-container
+      image:  tomcat
+      ports:
+        - containerPort: 8080
 ...
