--- a/pod.yml
+++ b/pod.yml
@@ -16,3 +16,18 @@ spec:
       ports:
         - containerPort: 8080
 ...
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: cbz-service
+spec:
+  selector:
+    app: cbz-app
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+  type: NodePort
+...
